--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -73,7 +73,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>156</y>
+      <y>132</y>
       <width>181</width>
       <height>281</height>
      </rect>
@@ -201,7 +201,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>440</y>
+      <y>416</y>
       <width>112</width>
       <height>32</height>
      </rect>
@@ -214,7 +214,7 @@
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>444</y>
+      <y>420</y>
       <width>61</width>
       <height>20</height>
      </rect>
@@ -223,7 +223,7 @@
      <string>스크롤</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="chkShowTileMap">
+   <widget class="QCheckBox" name="chkShowDefaultTileMap">
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -234,6 +234,9 @@
     </property>
     <property name="text">
      <string>기본배경이미지 보기</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QCheckBox" name="chkShowTileLine">
@@ -248,25 +251,15 @@
     <property name="text">
      <string>맵타일선 보기</string>
     </property>
-   </widget>
-   <widget class="QCheckBox" name="chkShowTileMapLine">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>110</y>
-      <width>121</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>맵이미지/선 보기</string>
+    <property name="checked">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QCheckBox" name="chkShowDataMap">
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>130</y>
+      <y>110</y>
       <width>101</width>
       <height>20</height>
      </rect>
