--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -294,6 +294,19 @@
      <string>FadeOut</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="btnViewCharactor">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>490</y>
+      <width>112</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>케릭터 생성</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
