--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -307,6 +307,19 @@
      <string>케릭터 생성</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="btnScene1">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>490</y>
+      <width>71</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>장면1</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
