--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,9 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>665</width>
+    <width>890</width>
     <height>600</height>
    </rect>
+  </property>
+  <property name="font">
+   <font>
+    <pointsize>12</pointsize>
+   </font>
   </property>
   <property name="windowTitle">
    <string>코딩스튜디오 - 오픈월드 프로젝트</string>
@@ -19,7 +24,7 @@
      <rect>
       <x>200</x>
       <y>30</y>
-      <width>441</width>
+      <width>491</width>
       <height>451</height>
      </rect>
     </property>
@@ -28,7 +33,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>50</y>
+      <y>17</y>
       <width>58</width>
       <height>16</height>
      </rect>
@@ -41,7 +46,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>40</y>
+      <y>10</y>
       <width>101</width>
       <height>32</height>
      </rect>
@@ -73,9 +78,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>132</y>
+      <y>150</y>
       <width>181</width>
-      <height>281</height>
+      <height>251</height>
      </rect>
     </property>
     <property name="title">
@@ -85,20 +90,20 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>230</y>
+       <y>202</y>
        <width>91</width>
        <height>16</height>
       </rect>
      </property>
      <property name="text">
-      <string>매트릭의 데이타</string>
+      <string>매트릭 데이타</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>80</y>
+       <y>76</y>
        <width>141</width>
        <height>16</height>
       </rect>
@@ -124,7 +129,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>50</y>
+       <y>46</y>
        <width>113</width>
        <height>21</height>
       </rect>
@@ -134,7 +139,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>100</y>
+       <y>92</y>
        <width>113</width>
        <height>21</height>
       </rect>
@@ -144,7 +149,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>250</y>
+       <y>219</y>
        <width>113</width>
        <height>21</height>
       </rect>
@@ -154,20 +159,20 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>130</y>
-       <width>161</width>
+       <y>118</y>
+       <width>131</width>
        <height>16</height>
       </rect>
      </property>
      <property name="text">
-      <string>마우스의 맵 테두리 터치 이벤트</string>
+      <string>매트릭 보더 터치</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="edtBorderTouchDir">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>150</y>
+       <y>134</y>
        <width>113</width>
        <height>21</height>
       </rect>
@@ -177,57 +182,31 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>180</y>
+       <y>160</y>
        <width>111</width>
        <height>16</height>
       </rect>
      </property>
      <property name="text">
-      <string>맵데이타내의 좌표</string>
+      <string>매트릭 데이타 좌표</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="edtMetricDataLocation">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>200</y>
+       <y>176</y>
        <width>113</width>
        <height>21</height>
       </rect>
      </property>
     </widget>
    </widget>
-   <widget class="QPushButton" name="btnLoadBackgroundImage">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>416</y>
-      <width>112</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>배경이미지...</string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="chkScroll">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>420</y>
-      <width>61</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>스크롤</string>
-    </property>
-   </widget>
    <widget class="QCheckBox" name="chkShowDefaultTileMap">
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>70</y>
+      <y>40</y>
       <width>131</width>
       <height>20</height>
      </rect>
@@ -243,7 +222,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>90</y>
+      <y>60</y>
       <width>101</width>
       <height>20</height>
      </rect>
@@ -259,20 +238,20 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>110</y>
-      <width>101</width>
+      <y>120</y>
+      <width>141</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>맵데이타 보기</string>
+     <string>매트릭 데이타 보기</string>
     </property>
    </widget>
    <widget class="QPushButton" name="btnFadeIn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>450</y>
+      <x>530</x>
+      <y>480</y>
       <width>81</width>
       <height>32</height>
      </rect>
@@ -284,8 +263,8 @@
    <widget class="QPushButton" name="btnFadeOut">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>450</y>
+      <x>610</x>
+      <y>480</y>
       <width>81</width>
       <height>32</height>
      </rect>
@@ -320,13 +299,144 @@
      <string>장면1</string>
     </property>
    </widget>
+   <widget class="QCheckBox" name="chkScroll">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>94</y>
+      <width>61</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>스크롤</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnLoadBackgroundImage">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>90</y>
+      <width>112</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>배경이미지...</string>
+    </property>
+   </widget>
+   <widget class="QGroupBox" name="groupBox_2">
+    <property name="geometry">
+     <rect>
+      <x>700</x>
+      <y>10</y>
+      <width>181</width>
+      <height>211</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>케릭터 이벤트</string>
+    </property>
+    <widget class="QLabel" name="label_8">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>163</y>
+       <width>91</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>매트릭의 데이타</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_9">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>76</y>
+       <width>141</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>매트릭의 픽셀 좌표</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_10">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>111</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>화면상의매트릭 좌표</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="edtMetricLocation_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>46</y>
+       <width>113</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="edtMetricPixel_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>92</y>
+       <width>113</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="edtMetricData_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>180</y>
+       <width>113</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_12">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>121</y>
+       <width>111</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>맵데이타내의 좌표</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="edtMetricDataLocation_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>137</y>
+       <width>113</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>665</width>
+     <width>890</width>
      <height>22</height>
     </rect>
    </property>
